--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,3 +2,6 @@
 - name: Install from Source
   ansible.builtin.import_tasks: install-from-source.yml
   when: indexer_install_from_source | bool
+
+- name: Configure algorand-indexer
+  ansible.builtin.import_tasks: configure.yml
