--- a/tasks/install-from-source.yml
+++ b/tasks/install-from-source.yml
@@ -5,12 +5,17 @@
   register: __indexer_temp_dir
 
 - name: Download Go
+  ansible.builtin.get_url:
+    url: https://dl.google.com/go/go{{ __indexer_golang_version }}.linux-amd64.tar.gz
+    checksum: sha256:4cdd2bc664724dc7db94ad51b503512c5ae7220951cac568120f64f8e94399fc
+    dest: "{{ __indexer_temp_dir.path }}"
+  register: __indexer_go_download
+
+- name: Install Go
   ansible.builtin.unarchive:
-    src: https://dl.google.com/go/go{{ __indexer_golang_version }}.linux-amd64.tar.gz
+    src: "{{ __indexer_go_download.dest }}"
     dest: /usr/local
     creates: "{{ __indexer_golang_root }}"
-    # checksum: 4cdd2bc664724dc7db94ad51b503512c5ae7220951cac568120f64f8e94399fc
-    remote_src: yes
 
 - name: Install Dependencies
   ansible.builtin.package:
@@ -69,3 +74,8 @@
         src: "{{ __indexer_git_dir }}/cmd/conduit/conduit"
         dest: /usr/local/bin
         mode: 0755
+
+- name: Cleanup Temporary Directory
+  file:
+    path: "{{ indexer_temp_dir.path }}"
+    state: absent
