tasks(install-from-source): fix install

--- a/tasks/install-from-source.yml
+++ b/tasks/install-from-source.yml
@@ -13,6 +13,7 @@
 
 - name: Install Go
   ansible.builtin.unarchive:
+    remote_src: yes
     src: "{{ __indexer_go_download.dest }}"
     dest: /usr/local
     creates: "{{ __indexer_golang_root }}"
