--- a/tasks/install-from-source.yml
+++ b/tasks/install-from-source.yml
@@ -4,14 +4,14 @@
     state: directory
   register: __indexer_temp_dir
 
-- name: Download Go
+- name: Download Go {{ __indexer_golang_version }} 
   ansible.builtin.get_url:
     url: https://dl.google.com/go/go{{ __indexer_golang_version }}.linux-amd64.tar.gz
     checksum: sha256:4cdd2bc664724dc7db94ad51b503512c5ae7220951cac568120f64f8e94399fc
     dest: "{{ __indexer_temp_dir.path }}"
   register: __indexer_go_download
 
-- name: Install Go
+- name: Install Go {{ __indexer_golang_version }}
   ansible.builtin.unarchive:
     remote_src: yes
     src: "{{ __indexer_go_download.dest }}"
