--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,5 +6,6 @@ indexer_install_conduit: no
 # whether or not to install indexer from source
 indexer_install_from_source: yes
 
-# which version (git ref) of indexer git repository to install
+# which version (git ref) of indexer git repository to use
+# when installing from source
 indexer_source_version: master
